# LearnOpenGL

./: CMakeLists.txt  README.md  main.cpp
Include/: shader.h  stb_image.h
Include/common/: controls.cpp  controls.hpp  model.cpp  model.hpp  objloader.cpp  objloader.hpp  shader.cpp  shader.hpp  text2D.cpp  texture.cpp  texture.hpp  vboindexer.cpp
shader/: fragmentShader.glsl  vertexshader.glsl
src/: glad.c  shader.cpp
